...
        }}
      />
      <Tabs.Screen
        name="history"
        options={{
          title: "Activity History",
          tabBarLabel: "History",
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="time-outline" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
